[package]
name = "nodeindex"
version = "0.1.0"
edition = "2024"

[dependencies]
bindings = { git = "https://github.com/vis-eyth/bitcraft-bindings", rev = "cf05a942a8a1e0abb2537445774ed30cd437f023" }
anyhow = { version = "1.0.98" }
intmap = { version = "3.1.2" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.142" }
tokio = { version = "1.47.1", features = ["rt", "signal", "macros"] }
axum = { version = "0.8.4" }
tower-http = { version = "0.6.6", features = ["cors", "compression-gzip", "compression-zstd"] }
