[package]
name = "nodeindex"
version = "0.1.0"
edition = "2024"

[dependencies]
bindings = { git = "https://github.com/vis-eyth/bitcraft-bindings", rev = "b1977f9a896a754e1787f9b5af689d30dd08ab14" }
anyhow = { version = "1.0.98" }
hashbrown = { version = "0.16.0" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.142" }
tokio = { version = "1.47.1", features = ["rt", "signal", "macros"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19"}
axum = { version = "0.8.4" }
tower-http = { version = "0.6.6", features = ["cors", "compression-gzip", "compression-zstd"] }
