[package]
name = "nodeindex"
version = "0.1.0"
edition = "2024"

[dependencies]
bindings = { path = "../bindings" }
spacetimedb-sdk = { version = "1.3.0" }
anyhow = { version = "1.0.98" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.142" }
tokio = { version = "1.47.1", features = ["rt", "signal", "macros"] }
